<resources>
    <string name="app_name">Happy_Index</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_temperature">Temperature</string>
    <string name="menu_air">Air</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Help/Feedback</string>


    <string name="GPS_info_Receiving">Receiving location information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
