<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_temperature"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_temperature" />
        <item
            android:id="@+id/nav_air"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_air" />

    </group>

    <item android:title="setting">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_help" />
        </menu>
    </item>

</menu>
